# django-webpack-boilerplate

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  webpack.common.js  webpack.config.dev.js  webpack.config.prod.js
app/: .env.example  settings.py  urls.py
assets/scripts/: app.js
assets/scripts/pages/: home.js
assets/styles/: app.scss
assets/styles/pages/: home.scss
assets/styles/shared/: _fonts.scss
templates/layouts/: app.html
templates/pages/: home.html
