[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = ""
authors = ["tranquangvu <vutran.513@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
Django = "^3.1.7"
django-environ = "^0.4.5"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
